# Book-Recomender

./: .gitignore (2)  Cargo.toml  books_file.txt  books_file_1.txt  books_file_2.txt  books_stats_log.txt  commands.txt  config.ini  insert_log.txt  lists_1.txt  log_ascii_reading  log_books_recommends.txt  log_ids.txt  log_stemmer_test  log_terms.txt  test_result_phrases_2.txt
backup/: commands.txt  log_ids.txt  test_result.txt  test_result_phrases_2.txt  test_result_phrases_3.txt  test_result_phrases_4.txt
books/: 165.txt  167.txt  177.txt  178.txt  180.txt  207.txt  209.txt  210.txt  211.txt  212.txt  214.txt
src/: custom_postgres.rs  lib.rs  magister_add_book - Ярлык.lnk  main.rs  main2.rs
test/: 268_phrase_2.txt  268_phrase_2_2.txt  268_phrase_3.txt  268_phrase_3_2.txt  268_phrase_4.txt  268_phrase_4_2.txt  268_words.txt  3796_phrase_2.txt  3796_phrase_2_2.txt  3796_phrase_2_old.txt  3796_phrase_3.txt  3796_phrase_3_2.txt  3796_phrase_4.txt  3796_phrase_4_2.txt  3796_words.txt  3879_phrase_2.txt  3879_phrase_2_2.txt  3879_phrase_3.txt  3879_phrase_4.txt  3879_phrase_4_2.txt  3879_words.txt  7778_phrase_2.txt  7778_phrase_2_2.txt  7778_phrase_3.txt  7778_phrase_3_2.txt  7778_phrase_4.txt  7778_phrase_4_2.txt  7778_words.txt  books_file.txt  Шедевр.txt
test_2/: phrases_2_1019.txt  phrases_2_1043.txt  phrases_2_2.txt  phrases_2_2258.txt  phrases_2_2336.txt  phrases_2_268.txt  phrases_2_2915.txt  phrases_2_3.txt  phrases_2_3030.txt  phrases_2_309.txt  phrases_2_3796.txt  phrases_2_3879.txt  phrases_2_428.txt  phrases_2_5838.txt  phrases_2_5916.txt  (+47 more)
(+80 files in other folders)
